--- a/Projet_Memoire.ipynb
+++ b/Projet_Memoire.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fkkhfrom numpy import exp\n",
+    "fkfrom numpy import exp\n",
     "from math import sqrt\n",
     "import numpy as np\n",
     "from numpy import random\n",
