--- a/NCE_GAN.ipynb
+++ b/NCE_GAN.ipynb
@@ -2,41 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from numpy import exp\n",
-    "from math import sqrt\n",
-    "import numpy as np\n",
-    "from numpy import random\n",
-    "from math import pi\n",
-    "import tensorflow as tf\n",
-    "import matplotlib.pyplot as plt\n",
-    "from scipy.stats import norm\n",
-    "\n",
-    "\n",
-    "from function_memoire import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.718281828459045"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "exp(1)"
+    "from function_memoire import *\n",
+    "from tabulate import tabulate"
    ]
   },
   {
@@ -68,7 +39,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Cas 1 : Loi du bruit très distincte de l'échantillon:"
+    "### Cas 1 : Loi du bruit très distincte de l'échantillon: \n",
+    "* ( mu_data = 12, sigma _data= 1 ////VS//// mu_noise=24 , sigma_noise = 5)"
    ]
   },
   {
@@ -80,20 +52,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "fini à la  265  iteration\n",
+      "fini à la  282  iteration\n",
+      "fini à la  68  iteration\n",
+      "----------------------------  -----------\n",
+      "quadratic error                  0.165064\n",
+      "Variance estim                   0.310581\n",
+      "Number of Iterations Average  4119\n",
+      "----------------------------  -----------\n",
       "true constant value 0.3989422804014327\n",
-      "fini à la  0  iteration\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'Gradient' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-bc8028492631>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mgrad\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mNCEDescent1D\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_batches\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmupo\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msigmapo\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmu_init\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m24\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msigma_init\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcte_init\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlearning_rate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0.01\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0.01\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax_iters\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m300\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnu\u001b[0m \u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"constant estimate\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mgrad\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcte\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\" nbre d'itérations\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgrad\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mctes\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/GitHub/NCE_GAN/function_memoire.py\u001b[0m in \u001b[0;36mNCEDescent1D\u001b[0;34m(x_batches, m, s, mu_init, sigma_init, cte_init, learning_rate, max_iters, nu)\u001b[0m\n\u001b[1;32m    104\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    105\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 106\u001b[0;31m     \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGradient\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcte\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mm0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0ms0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merror_mu\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0merror_sigma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merror_cte\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mctes\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmus\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msigmas\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    107\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    108\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'Gradient' is not defined"
+      " nbre d'itérations 691\n"
      ]
     }
    ],
@@ -103,34 +71,24 @@
     "batch_size=100\n",
     "X = random.normal(mupo, sigmapo, 1000)\n",
     "x_batches = np.reshape(X, (10, batch_size)) \n",
-    "print(\"true constant value\" , 1/(sqrt(2*pi)*sigmapo))\n",
     "\n",
+    "est_const=[]\n",
+    "nb_it=[]\n",
     "\n",
-    "grad=NCEDescent1D(x_batches, mupo, sigmapo,mu_init = 24, sigma_init=4, cte_init = 5, learning_rate = [0.01,0.01], max_iters = 300, nu =1)    \n",
-    "print(\"constant estimate\",grad.cte)\n",
-    "print(\" nbre d'itérations\", len(grad.ctes))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grad=NCEDescent1D(x_batches, mupo, sigmapo,mu_init = 24, sigma_init=4, cte_init = 5, learning_rate = [0.01,0.01], max_iters = 100, nu =1)    \n",
-    "print(\"constant estimate\",grad.cte)\n",
-    "print(\"true constant value\" , 1/(sqrt(2*pi)*sigmapo))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grad=NCEDescent1D(x_batches, mupo, sigmapo,mu_init = 24, sigma_init=4, cte_init = 5, learning_rate = [1,0.01], max_iters = 500, nu =1)    \n",
-    "print(\"constant estimate\",grad.cte)\n",
-    "print(\"true constant value\" , 1/(sqrt(2*pi)*sigmapo))\n",
+    "for i in range(10):\n",
+    "    grad=NCEDescent1D(x_batches, mupo, sigmapo,mu_init = 24, sigma_init=4, cte_init = 5, learning_rate = [1,0.01], max_iters = 500, nu =1)    \n",
+    "    est_const.append(grad.cte)\n",
+    "    nb_it.append(len(grad.ctes))\n",
+    "    \n",
+    "quad_error = np.mean(np.array(est_const) - 1/(sqrt(2*pi)*sigmapo) )\n",
+    "var_estim = np.var(np.array(est_const))\n",
+    "mean_it = np.mean(np.array(nb_it))\n",
+    "\n",
+    "tab=[['quadratic error', quad_error],['Variance estim', var_estim],['Number of Iterations Average',mean_it]]\n",
+    "\n",
+    "print(tabulate(tab))\n",
+    "print(\"true constant value\" , 1/(sqrt(2*pi)*sigmapo) )    \n",
+    "#print(\"constant estimate\",grad.cte)\n",
     "print(\" nbre d'itérations\", len(grad.ctes))"
    ]
   },
@@ -139,7 +97,15 @@
    "metadata": {},
    "source": [
     "#### Remarques :\n",
-    "* L'algorithme n'effectue pas plus de 2 itérations lorsque bruit et échantillons sont trop similaires"
+    "* 1) L'algorithme est très sensible à l'initialisation. Pour C0= 5, donc loin de la vraie constante, il faut prendre un pas assez grand (ici =1) afin d'espérer converger. à titre d'exemple avec un pas = 0,1 on converge jamais.Ceci est surement du au support des lois dont l'approximation numériques implique une très faible variation du gradient.\n",
+    "* 2) Quand l'algorithme converge sa variance semble plutot grande en lançant le code à plusieurs reprises, avec une estimation hasardeuse ( ne converge pas, ou reste eloignée de la situation.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Impact de nu "
    ]
   },
   {
@@ -153,8 +119,6 @@
     "batch_size=100\n",
     "X = random.normal(mupo, sigmapo, 1000)\n",
     "x_batches = np.reshape(X, (10, batch_size)) \n",
-    "\n",
-    "\n",
     "x= np.linspace(1,100,num=50)\n",
     "\n",
     "ctes=[]\n",
@@ -165,7 +129,7 @@
     "    \n",
     "    for j in range(10):\n",
     "        \n",
-    "        grad = NCEDescent(x_batches,mupo, sigmapo,mu_init = 24, sigma_init=4, cte_init = 0.2, learning_rate = [0.01,0.01], max_iters = 100, nu =x[i])\n",
+    "        grad = NCEDescent1D(x_batches,mupo, sigmapo,mu_init = 24, sigma_init=4, cte_init = 0.2, learning_rate = [0.01,0.01], max_iters = 100, nu =x[i])\n",
     "        #print(grad.m0)\n",
     "        ctes.append(grad.cte)\n",
     "    \n",
