--- a/NCE_GAN.ipynb
+++ b/NCE_GAN.ipynb
@@ -105,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Impact de nu "
+    "#### Impact de nu =(Taille echantillon du bruit)/(Taille echantillon data)"
    ]
   },
   {
