--- a/GAN _Multidim_Tensorflow.ipynb
+++ b/GAN _Multidim_Tensorflow.ipynb
@@ -320,27 +320,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[2.2358782, -0.029103553], [4.930574, 0.8303314]]\n",
-      "[[ 4.999998 10.999998]\n",
-      " [10.999998 25.00001 ]]\n"
+      "Cte Estimate 0.079576065646111\n",
+      "True Value 0.07957747154594781\n",
+      "\n",
+      " Generator Cov Matrix \n",
+      " [[24.999825 38.99974 ]\n",
+      " [38.99974  60.999622]]\n",
+      "\n",
+      " Mu Generator [1.0030813 2.00482  ]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<tf.Variable 'Variable:0' shape=(2,) dtype=float32, numpy=array([0.9999999, 2.       ], dtype=float32)>"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
